Implemented create game endpoint and mapping fixes