@@ -1,5 +1,6 @@
 package bearly_passing.project.dto;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -8,12 +9,20 @@ import bearly_passing.project.domain.Game;
 public class GameMapper {
 
     public static GameDTO toDTO(Game game) {
+        if (game == null) return null;
+
         GameDTO dto = new GameDTO();
         dto.setId(game.getId());
         dto.setGameType(game.getGameType());
-        dto.setGameSessions(game.getSessions().stream()
+
+        if (game.getSessions() != null) {
+            dto.setGameSessions(game.getSessions().stream()
                 .map(GameSessionMapper::toDTO)
-                .toList());
+                .collect(Collectors.toList()));
+        } else {
+            dto.setGameSessions(Collections.emptyList());
+        }
+
 
         if (game.getStudySet() != null) {
             dto.setStudySetName(game.getStudySet().getTitle());
@@ -28,10 +37,11 @@ public class GameMapper {
     }
 
     public static List<GameDTO> toDTOList(List<Game> games) {
+        if (games == null) return Collections.emptyList();
+        
         return games.stream()
                 .map(GameMapper::toDTO)
                 .collect(Collectors.toList());
     }
 
-    // Optional: You could add a fromDTO() if needed later.
 }
